[gd_scene load_steps=4 format=3 uid="uid://dpbqfdvmt7max"]

[ext_resource type="Script" uid="uid://v48ejj16sig1" path="res://Scenes/Stage/Upgrade Scene/Upgrade Button/upgrade_button.gd" id="1_5qdkr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y3iwc"]
bg_color = Color(0.11983502, 0.11983502, 0.11983502, 1)
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_top = 6.0
expand_margin_right = 6.0
expand_margin_bottom = 6.0

[sub_resource type="Environment" id="Environment_fao0s"]
background_mode = 3
glow_enabled = true

[node name="UpgradeButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 1.0
offset_right = 208.0
offset_bottom = 251.0
script = ExtResource("1_5qdkr")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y3iwc")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 2

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="TitleLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Title Label"
vertical_alignment = 1

[node name="QuantityLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
bbcode_enabled = true
text = "0 / 10"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DescriptionContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 64

[node name="DescriptionLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/DescriptionContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ButtonText" type="RichTextLabel" parent="PanelContainer/VBoxContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_right = -6.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Hello World
"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fao0s")
